# calculator

./: CMakeLists.txt  Dockerfile  calculator.h  calculator_impl.cpp  deploy.yml  inventory  jenkinsfile  main.cpp  test.cpp
